kube/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: app-v1
  labels:
    app: app
    version: v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: app
        version: v1
    spec:
      containers:
      - name: app
        image: andreleoni/app-website:latest
        args: ["rails s -p 3002 -b 0.0.0.0"]
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
---
