kube/app.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
  labels:
    app: app
    service: app
spec:
  ports:
  - port: 3000
    name: http
  selector:
    app: app
---
